# defi-arbitrage-engine

./: .env.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  LICENSE  PERFORMANCE.md  README.md  experimental_results.txt  ghpush.sh  launch.sh  orchestrator.py  requirements.txt
notebooks/: executive_summary_20250603_024955.json  mev_performance_analysis.ipynb
research/: bibliography.md  methodology.md  sub_millisecond_mev_paper.tex
src/algorithms/: advanced_mathematical_theory.py  amm_optimization.py  mev_detection.py
src/core/: blockchain.py  mev_master_engine.py  polyglot_engine.py  test_polyglot_integration.py
src/core/asm_optimizations/: Makefile  asm_interface.c  math_ops.asm  test_asm_integration.py
src/core/cpp_net/: CMakeLists.txt  build.sh
src/core/cpp_net/src/: network_monitor.cpp  python_bindings.cpp
src/core/go_concurrent/: go.mod  go.sum  mempool_processor.go
src/core/js_wasm/: index.js  package-lock.json  package.json
src/core/rust_engine/: Cargo.toml
src/core/rust_engine/src/: lib.rs
src/dex/: balancer.go  balancer_shared.go  sushiswap.cpp  uniswap_v3.py
src/monitoring/: mempool.py
src/utils/: crypto_utils.rs  crypto_utils_simple.rs  data_structures.zig  math_utils.py  memory_utils.c  network_utils.js  time_utils.jl
tests/: test_crypto_performance.rs  test_data_structures.zig  test_dex_performance.py  test_math_performance.jl  test_memory_performance.c  test_network_latency.js
