[package]
name = "mev_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "mev_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
crossbeam = "0.8"
dashmap = "5.4"
num-bigint = "0.4"

# Removed ethers, web3, primitive-types, and reqwest to avoid ICU/crypto dependencies

[dependencies.pyo3-asyncio]
version = "0.20"
features = ["tokio-runtime"]
